actual fix for submit button (z-index)

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -162,6 +162,7 @@ a:active {
 
 #pairButton {
     float: right;
+    position: relative;
 }
 
 #results {
